# semester-work-b-tree-11-004

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmark1.cpp  demo_benchmark.cpp  find_benchmark.cpp  insert_benchmark.cpp  remove_benchmark.cpp
dataset/: generate_csv_dataset.cpp
dataset/data/insert/: data(100).txt  data(1000).txt  data(10000).txt  data(100000).txt  data(250000).txt  data(500).txt  data(5000).txt  data(50000).txt  data(750).txt
dataset/data/remove/: data(100).txt  data(1000).txt  data(10000).txt  data(100000).txt  data(250000).txt  data(500).txt  data(5000).txt  data(50000).txt  data(750).txt
dataset/data/search/: data(100).txt  data(1000).txt  data(10000).txt  data(100000).txt  data(250000).txt  data(500).txt  data(5000).txt  data(50000).txt  data(750).txt
include/: BTree.hpp  data_structure.hpp  parser.hpp
src/: BTree.cpp  data_structure.cpp  generator.py  parser.cpp
